grammars/jinja2/grammar.js
    source_file: $ => repeat($._node),

    _node: $ => choice(
      $.comment,
      $.expression_statement,
      $.raw_statement,
      // compound (have bodies)
      $.block_statement,
      $.for_statement,
      $.if_statement,
      $.macro_statement,
      $.call_statement,
      $.filter_block_statement,
      $.set_block_statement,
      $.with_statement,
      $.autoescape_statement,
      $.trans_statement,
      // simple (no body)
      $.extends_statement,
      $.include_statement,
      $.import_statement,
      $.from_statement,
      $.set_statement,
      $.do_statement,
      $.debug_statement,
      // literal
      $.content,
    ),

    // =========================================================================
    // Delimiters — with optional whitespace-control characters (- and +)
    // =========================================================================

    _block_open:  _ => token(choice('{%', '{%-', '{%+')),
    _block_close: _ => token(choice('%}', '-%}', '+%}')),
    _expr_open:   _ => token(choice('{{', '{{-', '{{+')),
    _expr_close:  _ => token(choice('}}', '-}}', '+}}')),

    // =========================================================================
    // Comment: {# ... #}
    // =========================================================================

    // Handled as a single regex token; comment content is opaque.
    // The pattern ([^#]|#[^}])* matches: any non-# char OR # not followed by }
    expression_statement: $ => seq(
      $._expr_open,
      field('value', $._expression),
      $._expr_close,
    ),

    // =========================================================================
    // Raw block: {% raw %}...{% endraw %}
    // External scanner ensures the content is opaque (no tag processing).
    // =========================================================================

    raw_statement: $ => seq(
      $._block_open, 'raw', $._block_close,
      optional($._raw_content),
      $._block_open, 'endraw', $._block_close,
    ),

    // =========================================================================
    // Simple statements (single tag, no body)
    // =========================================================================

    // {% extends "base.html" %}
    extends_statement: $ => seq(
      $._block_open,
      'extends',
      field('path', $._expression),
      $._block_close,
    ),

    // {% include expr [ignore missing] [with[out] context] %}
    include_statement: $ => seq(
      $._block_open,
      'include',
      field('path', $._expression),
      optional($.include_ignore_missing),
      optional($.include_context),
      $._block_close,
    ),

    include_ignore_missing: _ => seq('ignore', 'missing'),
    import_statement: $ => seq(
      $._block_open,
      'import',
      field('path', $._expression),
      'as',
      field('alias', $.identifier),
      $._block_close,
    ),

    // {% from "macros.html" import name [as alias] [, ...] %}
    from_statement: $ => seq(
      $._block_open,
      'from',
      field('path', $._expression),
      'import',
      field('names', $.import_list),
      $._block_close,
    ),

    import_list: $ => seq(
      $.import_item,
      repeat(seq(',', $.import_item)),
      optional(','),
    ),

    import_item: $ => seq(
      field('name', $.identifier),
      optional(seq('as', field('alias', $.identifier))),
    ),

    // {% set name = expr %}
    set_statement: $ => seq(
      $._block_open,
      'set',
      field('name', $.identifier),
      '=',
      field('value', $._expression),
      $._block_close,
    ),

    // {% do expr %}
    do_statement: $ => seq(
      $._block_open,
      'do',
      field('expression', $._expression),
      $._block_close,
    ),

    // {% debug %} or {% debug var %}
    debug_statement: $ => seq(
      $._block_open,
      'debug',
      optional(field('expression', $._expression)),
      $._block_close,
    ),

    // =========================================================================
    // Compound statements (have bodies)
    // =========================================================================

    // {% block name [scoped] %}...{% endblock [name] %}
    block_statement: $ => seq(
      $._block_open,
      'block',
      field('name', $.identifier),
      optional('scoped'),
      $._block_close,
      optional(field('body', $._body)),
      $._block_open, 'endblock', optional($.identifier), $._block_close,
    ),

    // {% for target in iterable [if condition] [recursive] %}
    //   body
    // [{% else %}
    //   else_body]
    // {% endfor %}
    for_statement: $ => seq(
      $._block_open,
      'for',
      field('target', $._for_target),
      'in',
      field('iterable', $._expression),
      optional(seq('if', field('condition', $._expression))),
      optional(field('recursive', alias('recursive', $.recursive))),
      $._block_close,
      optional(field('body', $._body)),
      optional($.for_else),
      $._block_open, 'endfor', $._block_close,
    ),

    // For-loop targets are always simple identifiers or comma-separated identifiers.
    // Jinja2 doesn't support arbitrary expression unpacking — only names.
    // Using tuple_expression here would cause `key, value in items` to be
    // mis-parsed as tuple(key, comparison(value in items)).
    _for_target: $ => choice(
      $.identifier,
      $.identifier_tuple,
    ),

    // Tuple of identifiers (only valid in for-loop targets)
    identifier_tuple: $ => seq(
      $.identifier,
      repeat1(seq(',', $.identifier)),
      optional(','),
    ),

    for_else: $ => seq(
      $._block_open, 'else', $._block_close,
      optional($._body),
    ),

    // {% if condition %}
    //   body
    // [{% elif condition %} body]*
    // [{% else %} body]
    // {% endif %}
    if_statement: $ => seq(
      $._block_open,
      'if',
      field('condition', $._expression),
      $._block_close,
      optional(field('body', $._body)),
      repeat($.elif_clause),
      optional($.else_clause),
      $._block_open, 'endif', $._block_close,
    ),

    elif_clause: $ => seq(
      $._block_open,
      'elif',
      field('condition', $._expression),
      $._block_close,
      optional(field('body', $._body)),
    ),

    else_clause: $ => seq(
      $._block_open, 'else', $._block_close,
      optional($._body),
    ),

    // {% macro name(params) %}...{% endmacro %}
    macro_statement: $ => seq(
      $._block_open,
      'macro',
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      $._block_close,
      optional(field('body', $._body)),
      $._block_open, 'endmacro', $._block_close,
    ),

    // {% call[(caller_params)] callee(args) %}...{% endcall %}
    filter_block_statement: $ => seq(
      $._block_open,
      'filter',
      field('filter', $.filter_chain),
      $._block_close,
      optional(field('body', $._body)),
      $._block_open, 'endfilter', $._block_close,
    ),

    // {% set name [| filter] %}...{% endset %}
    set_block_statement: $ => seq(
      $._block_open,
      'set',
      field('name', $.identifier),
      optional(seq('|', field('filter', $.filter_chain))),
      $._block_close,
      optional(field('body', $._body)),
      $._block_open, 'endset', $._block_close,
    ),

    // {% with [name=value, ...] %}...{% endwith %}
    with_statement: $ => seq(
      $._block_open,
      'with',
      optional(field('assignments', $.with_assignments)),
      $._block_close,
      optional(field('body', $._body)),
      $._block_open, 'endwith', $._block_close,
    ),

    with_assignments: $ => seq(
      $.with_assignment,
      repeat(seq(',', $.with_assignment)),
    ),

    with_assignment: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),

    // {% autoescape [expr] %}...{% endautoescape %}
    autoescape_statement: $ => seq(
      $._block_open,
      'autoescape',
      optional(field('value', $._expression)),
      $._block_close,
      optional(field('body', $._body)),
      $._block_open, 'endautoescape', $._block_close,
    ),

    // {% trans [var=expr, ...] %}singular{% pluralize [count] %}plural{% endtrans %}
    //
    // GLR resolves the body/pluralize/endtrans ambiguity: the scanner can't know
    // when the singular body ends until it sees the keyword after {% ... %}.
    // Declaring [$.trans_statement] in conflicts enables GLR for this rule.
    trans_statement: $ => seq(
      $._block_open,
      'trans',
      optional(field('variables', $.trans_variables)),
      $._block_close,
      optional(field('singular', $._body)),
      optional(field('plural', $.pluralize_clause)),
      $._block_open, 'endtrans', $._block_close,
    ),

    trans_variables: $ => seq(
      $.trans_variable,
      repeat(seq(',', $.trans_variable)),
    ),

    trans_variable: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),

    pluralize_clause: $ => seq(
      $._block_open,
      'pluralize',
      optional(field('count', $.identifier)),
      $._block_close,
      optional(field('body', $._body)),
    ),

    // =========================================================================
    // Body: non-empty sequence of nodes between opening and closing tags.
    // tree-sitter forbids named rules matching empty string; use optional()
    // at each call site to handle potentially-empty bodies.
    // =========================================================================

    _body: $ => repeat1($._node),

    // =========================================================================
    // Parameters (for macro/call definitions)
    // =========================================================================

    parameter_list: $ => seq(
      '(',
      optional(seq(
        $.parameter,
        repeat(seq(',', $.parameter)),
        optional(','),
      )),
      ')',
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('default', $._expression))),
    ),

    // =========================================================================
    // Expression grammar
    // =========================================================================

    _expression: $ => choice(
      $.ternary_expression,
      $.or_expression,
      $.and_expression,
      $.not_expression,
      $.comparison_expression,
      $.concat_expression,
      $.add_expression,
      $.mul_expression,
      $.unary_expression,
      $.power_expression,
      $.filter_expression,
      $.test_expression,
      $.call_expression,
      $.attribute_expression,
      $.subscript_expression,
      $._primary_expression,
      // Note: tuple syntax is NOT supported in general expressions.
      // Tuples only appear in for-loop targets (key, value unpacking),
      // handled via identifier_tuple in _for_target.
    ),

    // Ternary: value if condition else alternative
    ternary_expression: $ => prec.right(PREC.TERNARY, seq(
      field('value', $._expression),
      'if',
      field('condition', $._expression),
      'else',
      field('alternative', $._expression),
    )),

    // Logical or
    or_expression: $ => prec.left(PREC.OR, seq(
      field('left', $._expression),
      'or',
      field('right', $._expression),
    )),

    // Logical and
    and_expression: $ => prec.left(PREC.AND, seq(
      field('left', $._expression),
      'and',
      field('right', $._expression),
    )),

    // Logical not
    not_expression: $ => prec(PREC.NOT, seq(
      'not',
      field('operand', $._expression),
    )),

    // Comparison operators
    comparison_expression: $ => prec.left(PREC.COMPARE, seq(
      field('left', $._expression),
      field('operator', $._comparison_op),
      field('right', $._expression),
    )),

    _comparison_op: $ => choice(
      '==', '!=', '<', '>', '<=', '>=',
      'in',
      alias($._not_in, 'not in'),
    ),

    concat_expression: $ => prec.left(PREC.CONCAT, seq(
      field('left', $._expression),
      '~',
      field('right', $._expression),
    )),

    // Additive: + -
    add_expression: $ => prec.left(PREC.ADD, seq(
      field('left', $._expression),
      field('operator', choice('+', '-')),
      field('right', $._expression),
    )),

    // Multiplicative: * / // %
    mul_expression: $ => prec.left(PREC.MUL, seq(
      field('left', $._expression),
      field('operator', choice('*', '/', '//', '%')),
      field('right', $._expression),
    )),

    // Unary: -a +a
    power_expression: $ => prec.right(PREC.POWER, seq(
      field('base', $._expression),
      '**',
      field('exponent', $._expression),
    )),

    // Filter application: value | filter[(args)]
    filter_expression: $ => prec.left(PREC.FILTER, seq(
      field('value', $._expression),
      '|',
      field('filter', $.filter_chain),
    )),

    // filter_chain: a single filter or chained filters
    filter_chain: $ => prec.left(seq(
      $.filter_item,
      repeat(seq('|', $.filter_item)),
    )),

    filter_item: $ => prec.right(seq(
      field('name', $.identifier),
      optional(field('arguments', $.argument_list)),
    )),

    // Test: value is [not] test_name
    test_expression: $ => prec.left(PREC.COMPARE, seq(
      field('value', $._expression),
      'is',
      optional(field('negated', 'not')),
      field('test', $.identifier),
    )),

    // Function/method call: f(args)
    call_expression: $ => prec.left(PREC.CALL, seq(
      field('function', $._expression),
      field('arguments', $.argument_list),
    )),

    // Attribute access: a.b
    attribute_expression: $ => prec.left(PREC.ATTRIBUTE, seq(
      field('object', $._expression),
      '.',
      field('attribute', $.identifier),
    )),

    // Subscript: a[key]
    subscript_expression: $ => prec.left(PREC.ATTRIBUTE, seq(
      field('object', $._expression),
      '[',
      field('key', $._expression),
      ']',
    )),

    // =========================================================================
    // Primary expressions
    // =========================================================================

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    list_expression: $ => seq(
      '[',
      optional(seq(
        $._expression,
        repeat(seq(',', $._expression)),
        optional(','),
      )),
      ']',
    ),

    dict_expression: $ => seq(
      '{',
      optional(seq(
        $.dict_pair,
        repeat(seq(',', $.dict_pair)),
        optional(','),
      )),
      '}',
    ),

    dict_pair: $ => seq(
      field('key', $._expression),
      ':',
      field('value', $._expression),
    ),

    // =========================================================================
    // Argument list (for calls)
    // =========================================================================

    argument_list: $ => seq(
      '(',
      optional(seq(
        $.argument,
        repeat(seq(',', $.argument)),
        optional(','),
      )),
      ')',
    ),

    argument: $ => choice(
      seq(field('name', $.identifier), '=', field('value', $._expression)),
      seq('*', field('splat', $._expression)),
      seq('**', field('double_splat', $._expression)),
      field('value', $._expression),
    ),

    // =========================================================================
    // Literals
    // =========================================================================

    string: _ => token(choice(
      seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),
      seq("'", repeat(choice(/[^'\\]/, /\\./)), "'"),
    )),

    integer: _ => token(/\d+/),

    float: _ => token(choice(
      /\d+\.\d*/,
      /\.\d+/,
      /\d+[eE][+-]?\d+/,
      /\d+\.\d*[eE][+-]?\d+/,
      /\.\d+[eE][+-]?\d+/,
    )),

    // Jinja2 accepts both Python-style and JS-style boolean/none literals
