grammars/jinja2/test/corpus/expressions.txt
================================================================================
string literal double quotes
================================================================================

{{ "hello world" }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (string))
  (content))

================================================================================
string literal single quotes
================================================================================

{{ 'hello' }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (string))
  (content))

================================================================================
integer literal
================================================================================

{{ 42 }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (integer))
  (content))

================================================================================
float literal
================================================================================

{{ 3.14 }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (float))
  (content))

================================================================================
boolean true
================================================================================

{{ true }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (boolean))
  (content))

================================================================================
none literal
================================================================================

{{ none }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (none))
  (content))

================================================================================
variable
================================================================================

{{ username }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (identifier))
  (content))

================================================================================
attribute access
================================================================================

{{ user.name }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (attribute_expression
      object: (identifier)
      attribute: (identifier)))
  (content))

================================================================================
chained attribute access
================================================================================

{{ user.profile.avatar }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (attribute_expression
      object: (attribute_expression
        object: (identifier)
        attribute: (identifier))
      attribute: (identifier)))
  (content))

================================================================================
subscript access
================================================================================

{{ items[0] }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (subscript_expression
      object: (identifier)
      key: (integer)))
  (content))

================================================================================
function call
================================================================================

{{ url_for('index') }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (call_expression
      function: (identifier)
      arguments: (argument_list
        (argument
          value: (string)))))
  (content))

================================================================================
function call with keyword args
================================================================================

{{ url_for('static', filename='style.css') }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (call_expression
      function: (identifier)
      arguments: (argument_list
        (argument
          value: (string))
        (argument
          name: (identifier)
          value: (string)))))
  (content))

================================================================================
filter simple
================================================================================

{{ name | upper }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (filter_expression
      value: (identifier)
      filter: (filter_chain
        (filter_item
          name: (identifier)))))
  (content))

================================================================================
filter with args
================================================================================

{{ text | truncate(100, true) }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (filter_expression
      value: (identifier)
      filter: (filter_chain
        (filter_item
          name: (identifier)
          arguments: (argument_list
            (argument
              value: (integer))
            (argument
              value: (boolean)))))))
  (content))

================================================================================
chained filters
================================================================================

{{ text | lower | title }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (filter_expression
      value: (filter_expression
        value: (identifier)
        filter: (filter_chain
          (filter_item
            name: (identifier))))
      filter: (filter_chain
        (filter_item
          name: (identifier)))))
  (content))

================================================================================
test expression
================================================================================

{{ value is defined }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (test_expression
      value: (identifier)
      test: (identifier)))
  (content))

================================================================================
test negated
================================================================================

{{ value is not none }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (test_expression
      value: (identifier)
      test: (identifier)))
  (content))

================================================================================
addition
================================================================================

{{ a + b }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (add_expression
      left: (identifier)
      right: (identifier)))
  (content))

================================================================================
string concatenation
================================================================================

{{ "Hello " ~ name }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (concat_expression
      left: (string)
      right: (identifier)))
  (content))

================================================================================
comparison
================================================================================

{{ x == y }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (comparison_expression
      left: (identifier)
      right: (identifier)))
  (content))

================================================================================
in operator
================================================================================

{{ item in list }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (comparison_expression
      left: (identifier)
      right: (identifier)))
  (content))

================================================================================
not in operator
================================================================================

{{ item not in list }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (comparison_expression
      left: (identifier)
      right: (identifier)))
  (content))

================================================================================
logical and
================================================================================

{{ a and b }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (and_expression
      left: (identifier)
      right: (identifier)))
  (content))

================================================================================
logical or
================================================================================

{{ a or b }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (or_expression
      left: (identifier)
      right: (identifier)))
  (content))

================================================================================
logical not
================================================================================

{{ not x }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (not_expression
      operand: (identifier)))
  (content))

================================================================================
ternary expression
================================================================================

{{ value if condition else default }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (ternary_expression
      value: (identifier)
      condition: (identifier)
      alternative: (identifier)))
  (content))

================================================================================
list literal
================================================================================

{{ [1, 2, 3] }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (list_expression
      (integer)
      (integer)
      (integer)))
  (content))

================================================================================
dict literal
================================================================================

{{ {'key': 'value'} }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (dict_expression
      (dict_pair
        key: (string)
        value: (string))))
  (content))

================================================================================
parenthesized expression
================================================================================

{{ (a + b) * c }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (mul_expression
      left: (parenthesized_expression
        (add_expression
          left: (identifier)
          right: (identifier)))
      right: (identifier)))
  (content))

================================================================================
power expression
================================================================================

{{ 2 ** 8 }}

--------------------------------------------------------------------------------

(source_file
  (content)
  (expression_statement
    value: (power_expression
      base: (integer)
      exponent: (integer)))
  (content))
