grammars/jinja2/test/corpus/statements.txt
================================================================================
extends statement
================================================================================

{% extends "base.html" %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (extends_statement
    path: (string))
  (content))

================================================================================
include statement
================================================================================

{% include "header.html" %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (include_statement
    path: (string))
  (content))

================================================================================
include with ignore missing
================================================================================

{% include "optional.html" ignore missing %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (include_statement
    path: (string)
    (include_ignore_missing))
  (content))

================================================================================
import statement
================================================================================

{% import "macros.html" as m %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (import_statement
    path: (string)
    alias: (identifier))
  (content))

================================================================================
from statement
================================================================================

{% from "utils.html" import render_button, render_card as card %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (from_statement
    path: (string)
    names: (import_list
      (import_item
        name: (identifier))
      (import_item
        name: (identifier)
        alias: (identifier))))
  (content))

================================================================================
set statement
================================================================================

{% set greeting = "Hello" %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (set_statement
    name: (identifier)
    value: (string))
  (content))

================================================================================
do statement
================================================================================

{% do items.append(item) %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (do_statement
    expression: (call_expression
      function: (attribute_expression
        object: (identifier)
        attribute: (identifier))
      arguments: (argument_list
        (argument
          value: (identifier)))))
  (content))

================================================================================
debug statement
================================================================================

{% debug %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (debug_statement)
  (content))

================================================================================
raw statement
================================================================================

{% raw %}{{ not processed }}{% endraw %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (raw_statement)
  (content))

================================================================================
block statement
================================================================================

{% block content %}Hello{% endblock %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (block_statement
    name: (identifier)
    body: (content))
  (content))

================================================================================
block statement scoped
================================================================================

{% block title scoped %}{% endblock title %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (block_statement
    name: (identifier)
    (identifier))
  (content))

================================================================================
for loop simple
================================================================================

{% for user in users %}{{ user.name }}{% endfor %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (for_statement
    target: (identifier)
    iterable: (identifier)
    body: (expression_statement
      value: (attribute_expression
        object: (identifier)
        attribute: (identifier))))
  (content))

================================================================================
for loop with else
================================================================================

{% for item in items %}{{ item }}{% else %}empty{% endfor %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (for_statement
    target: (identifier)
    iterable: (identifier)
    body: (expression_statement
      value: (identifier))
    (for_else
      (content)))
  (content))

================================================================================
for loop with condition
================================================================================

{% for user in users if user.active %}{{ user.name }}{% endfor %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (for_statement
    target: (identifier)
    iterable: (identifier)
    condition: (attribute_expression
      object: (identifier)
      attribute: (identifier))
    body: (expression_statement
      value: (attribute_expression
        object: (identifier)
        attribute: (identifier))))
  (content))

================================================================================
for loop with tuple target
================================================================================

{% for key, value in items %}{{ key }}: {{ value }}{% endfor %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (for_statement
    target: (identifier_tuple
      (identifier)
      (identifier))
    iterable: (identifier)
    body: (expression_statement
      value: (identifier))
    body: (content)
    body: (expression_statement
      value: (identifier)))
  (content))

================================================================================
if statement simple
================================================================================

{% if user %}Welcome{% endif %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (if_statement
    condition: (identifier)
    body: (content))
  (content))

================================================================================
if statement with elif and else
================================================================================

{% if a %}A{% elif b %}B{% else %}C{% endif %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (if_statement
    condition: (identifier)
    body: (content)
    (elif_clause
      condition: (identifier)
      body: (content))
    (else_clause
      (content)))
  (content))

================================================================================
macro definition
================================================================================

{% macro render_button(label, href="#") %}<a href="{{ href }}">{{ label }}</a>{% endmacro %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (macro_statement
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier))
      (parameter
        name: (identifier)
        default: (string)))
    body: (content)
    body: (expression_statement
      value: (identifier))
    body: (content)
    body: (expression_statement
      value: (identifier))
    body: (content))
  (content))

================================================================================
filter block
================================================================================

{% filter upper %}hello world{% endfilter %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (filter_block_statement
    filter: (filter_chain
      (filter_item
        name: (identifier)))
    body: (content))
  (content))

================================================================================
set block
================================================================================

{% set navigation %}
  <ul><li>Home</li></ul>
{% endset %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (set_block_statement
    name: (identifier)
    body: (content))
  (content))

================================================================================
with statement
================================================================================

{% with x = 1, y = 2 %}{{ x + y }}{% endwith %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (with_statement
    assignments: (with_assignments
      (with_assignment
        name: (identifier)
        value: (integer))
      (with_assignment
        name: (identifier)
        value: (integer)))
    body: (expression_statement
      value: (add_expression
        left: (identifier)
        right: (identifier))))
  (content))

================================================================================
autoescape statement
================================================================================

{% autoescape true %}{{ html }}{% endautoescape %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (autoescape_statement
    value: (boolean)
    body: (expression_statement
      value: (identifier)))
  (content))

================================================================================
trans statement
================================================================================

{% trans %}Hello World{% endtrans %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (trans_statement
    singular: (content))
  (content))

================================================================================
trans with pluralize
================================================================================

{% trans count=items|length %}One item{% pluralize %}{{ count }} items{% endtrans %}

--------------------------------------------------------------------------------

(source_file
  (content)
  (trans_statement
    variables: (trans_variables
      (trans_variable
        name: (identifier)
        value: (filter_expression
          value: (identifier)
          filter: (filter_chain
            (filter_item
              name: (identifier))))))
    singular: (content)
    plural: (pluralize_clause
      body: (expression_statement
        value: (identifier))
      body: (content)))
  (content))
